--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@ html
 	head
 		script(src="/js/riot.js")
 	body
-		h1 ToDo App
+		h1 ToDo App - modified by Peter
 		script(type="riot/tag" src="/tags/todo.tag")
 		script(src="/js/client.js")
 		todo
